--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ def includeDesktopSupport = false
 // Maven central needed for JUnit
 repositories {
     mavenCentral()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
@@ -50,6 +53,7 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
     testCompile 'junit:junit:4.12'
+    compile "com.github.dominikWin:badlog:316a7682bc890eb5c0d1df531f60f867dcdeec01"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
