--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
     ".classpath": true,
     ".project": true
   },
-  "wpilib.online": true
+  "wpilib.online": true,
+  "java.format.settings.url": "eclipse-formatter.xml",
+  "java.format.settings.profile": "Eclipse",
 }
